tests/error/variadic_start_twice.gw
#! [contains] vararg.start already used
fun void test(...) { vararg.start; vararg.start;}
